Compressed initial setup UX a little to remove scrollbars. Issue: #880

--- a/static/css/inbox.less
+++ b/static/css/inbox.less
@@ -1022,11 +1022,9 @@ a.fa:hover {
   color: #FFFFFF;
 }
 
-.welcome {
-  .screenshot {
-    text-align: center;
-    margin-top: 1em;
-  }
+.welcome .screenshot {
+  text-align: center;
+  margin-top: 1em;
 }
 
 .horizontal-options {
@@ -1034,9 +1032,6 @@ a.fa:hover {
     display: inline-block;
     outline: none;
     margin: 0.5em;
-    .fa {
-      margin-right: 0.5em;
-    }
   }
   .circle, .rectangle {
     display: inline-block;
@@ -1051,7 +1046,7 @@ a.fa:hover {
   }
   .selected .circle, .selected .rectangle {
     background-color: @ok-color;
-    color: #ffffff;
+    color: #FFFFFF;
   }
 }
 
@@ -1114,12 +1109,6 @@ a.fa:hover {
     .description {
       display: inline-block;
       margin-top: 0.5em;
-    }
-    .heading {
-      font-size: 1.5em;
-      width: 100%;
-      display: inline-block;
-      font-weight: bold;
     }
     &.selected .fa {
       visibility: visible;
