--- a/static/css/panel.less
+++ b/static/css/panel.less
@@ -2,6 +2,8 @@
 
 .panel-group {
 
+  margin-bottom: 0;
+
   .panel {
     box-shadow: none;
     &.disabled .panel-heading {
@@ -23,6 +25,7 @@
   }
   .panel-body {
     padding-top: 0;
+    padding-bottom: 0;
   }
   .panel-heading {
     padding: 0;
@@ -30,7 +33,7 @@
       cursor: pointer;
       width: 100%;
       display: block;
-      padding: 0.5em;
+      padding-top: 0.3em;
       outline: 0;
       font-size: 1.2em;
       &:hover, &:focus {
